# MandelbrotSet

./: .clang-tidy  CMakeLists.txt  LICENSE.md  README.md  main.cpp
data/: HintText.json
locations/: JuliaIsland.json  Seahorse.json  Sun.json
screenshots/: Starfish.json
src/: App.cpp  App.hpp  HintText.cpp  HintText.hpp  Input.cpp  Input.hpp  LocationManager.cpp  LocationManager.hpp  MandelbrotSet.cpp  MandelbrotSet.hpp  ThemeManager.cpp  ThemeManager.hpp  Utility.hpp
themes/: Amplified.json  Minimalist.json  Negative.json  NegativeAmplified.json  Nuclear.json  default_theme.json
